Protein quant dependencies should be in dependencies role to be executed on workers too

--- a/adapt_cluster_provisioning/roles/proteinquant/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/proteinquant/tasks/main.yml
@@ -4,13 +4,9 @@
   apt: pkg={{ item }} state=installed
   with_items: protquant_build_packages 
 
-- name: Install protein quant dependencies
-  apt: pkg={{ item }} state=installed
-  with_items: protquant_deps 
-
 - name: Create protein quant tool path
   file: path={{ protquant_loc }} state=directory
 - name: Get protein quant 
   git: repo=https://github.com/glormph/protein-quant version={{ protquant_git_ver }} dest={{ protquant_loc }}
 
-- include: ../../tools/tasks/tool_dependency_fixer.yml toolpath={{ protquant_loc }}/bin envdest={{ protquant_loc }} toolroot={{ tool_path }}/{{ protquant_pkg }} ldline="#"
+- include: ../../tools/tasks/tool_dependency_fixer.yml toolpath={{ protquant_loc }} envdest={{ protquant_loc }} toolroot={{ tool_path }}/{{ protquant_pkg }} ldline="#"
