--- a/adapt_cluster_provisioning/roles/tool_dependencies/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/tool_dependencies/tasks/main.yml
@@ -32,6 +32,10 @@
   apt: pkg={{ item }} state=installed
   with_items: msgfplus_deps
 
+- name: Install protein-quant scripts dependencies
+  apt: pkg={{ item }} state=installed
+  with_items: protein_quant_deps 
+
 - name: Install OpenMS dependenceis
   apt: pkg={{ item }} state=installed
   with_items: openms_deps
