Actually have a list of quant deps

--- a/adapt_cluster_provisioning/roles/tool_dependencies/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/tool_dependencies/vars/main.yml
@@ -37,6 +37,10 @@ pycolator_pip_deps:
 msgfplus_deps:
   - default-jdk
 
+protein_quant_deps:
+  - r-base
+  - r-cran-hmisc
+
 openms_deps:
   - qt4-dev-tools
   - libxerces-c-dev
