--- a/adapt_cluster_provisioning/roles/tool_dependencies/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/tool_dependencies/tasks/main.yml
@@ -14,18 +14,18 @@
   apt: pkg={{ item }} state=installed
   with_items: pout2mzid_deps
 
-- name: Install pycolator dependencies
+- name: Install msstitch dependencies
   apt: pkg={{ item }} state=installed
-  with_items: pycolator_deps
+  with_items: msstitch_deps
 
-- name: Install pycolator libraries from mirror
+- name: Install msstitch libraries from mirror
   pip: name={{ item }} state=present extra_args="--index-url=http://{{master_ip}}/pypimirror/simple"
        executable=pip3
-  with_items: pycolator_pip_deps
+  with_items: msstitch_pip_deps
   when: use_mirror is defined and use_mirror
-- name: Install pycolator libraries from internet
+- name: Install msstitch libraries from internet
   pip: name={{ item }} state=present executable=pip3
-  with_items: pycolator_pip_deps
+  with_items: msstitch_pip_deps
   when: use_mirror is not defined or not use_mirror
 
 - name: Install msgfplus dependencies
