--- a/adapt_cluster_provisioning/roles/tool_dependencies/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/tool_dependencies/tasks/main.yml
@@ -36,6 +36,6 @@
   apt: pkg={{ item }} state=installed
   with_items: protein_quant_deps 
 
-- name: Install OpenMS dependenceis
+- name: Install OpenMS dependencies
   apt: pkg={{ item }} state=installed
   with_items: openms_deps
