--- a/adapt_cluster_provisioning/tool_install_playbook.yml
+++ b/adapt_cluster_provisioning/tool_install_playbook.yml
@@ -16,5 +16,13 @@
   vars_files:
   - credentials/user_data.yml
   roles:
-  - tools
-  - galaxy
+  - proteowizard
+  - msgfplus
+  - percolator
+  - openms
+  - proteinquant
+  - msstitch
+  - galaxy # FIXME galaxy??
+  tasks:
+  - name: Fix ownership of all tools
+    file: path={{ tool_path }} owner=galaxy group=galaxy recurse=yes state=directory
