--- a/adapt_cluster_provisioning/roles/msstitch/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/msstitch/tasks/main.yml
@@ -10,4 +10,4 @@
 - name: Get msstitch 
   git: repo=https://github.com/glormph/msstitch version={{ msstitch_git_ver }} dest={{ msstitch_loc }}
 
-- include: ../../tools/tasks/tool_dependency_fixer.yml toolpath={{ msstitch_loc }} envdest={{ msstitch_loc }} toolroot={{ tool_path }}/{{ msstitch_pkg }} ldline="#"
+- include: ../../../misc/tool_dependency_fixer.yml toolpath={{ msstitch_loc }} envdest={{ msstitch_loc }} toolroot={{ tool_path }}/{{ msstitch_pkg }} ldline="#"
