Package list is a list, not single item, even though we only currently have one item on it

--- a/adapt_cluster_provisioning/roles/msgfplus/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/msgfplus/tasks/main.yml
@@ -2,7 +2,8 @@
 # MSGF+ installation
 
 - name: Install MSGFPlus build packages
-  apt: pkg={{ msgfplus_build_packages }} state=installed
+  apt: pkg={{ item }} state=installed
+  with_items: msgfplus_build_packages 
 
 - name: Fetch MSGFPlus java package
   get_url: url={{ msgf_url }} dest=/tmp/msgfplus.zip
