Rebooting now waits for machine to come back up

--- a/adapt_cluster_provisioning/roles/reboot/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/reboot/tasks/main.yml
@@ -1,5 +1,12 @@
 ---
-# Rebooting
+# Rebooting and waiting until done
 
 - name: Reboot system
   command: /sbin/reboot
+
+- name: waiting for system to come back
+  local_action: wait_for host={{ inventory_hostname }}
+                state=started
+  sudo: false
+
+
