--- a/adapt_cluster_provisioning/roles/galaxy_initialization/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy_initialization/tasks/main.yml
@@ -3,6 +3,11 @@
   command: python scripts/fetch_eggs.py chdir={{ galaxy_path }}
   sudo_user: galaxy
 
+- name: Create bogus galaxy upload dir for nginx which is not on the fileserver
+  file: path={{ data_path }}/upload_store state=directory
+- name: Adding nginx configuration file
+  copy: src=nginx.conf dest=/opt/nginx/conf/nginx.conf
+
 - name: Create galaxy db tables by running script
   command: "{{ galaxy_path }}/create_db.sh"
   sudo_user: galaxy
