Apparently needed double quote marks

--- a/adapt_cluster_provisioning/roles/nginx/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/nginx/tasks/main.yml
@@ -13,15 +13,15 @@
 
 - name: Getting nginx upload module source
   git: repo=https://github.com/vkholodkov/nginx-upload-module.git version=2.2 dest=/tmp/{{ nginx_upl_mod_package }}
-  when: "mirror" not in group_names and "master" in group_names
+  when: '"mirror" not in group_names and "master" in group_names'
 
 - name: Configuring makefile for nginx galaxy serving
   command: chdir=/tmp/{{ nginx_package }} ./configure --prefix=/opt/nginx --with-ipv6 --add-module=../{{ nginx_upl_mod_package }} --user=galaxy --group=galaxy --with-http_ssl_module --with-http_gzip_static_module --with-cc-opt=-Wno-error --with-debug
-  when: "mirror" not in group_names and "master" in group_names
+  when: '"mirror" not in group_names and "master" in group_names'
 
 - name: Configuring makefile for mirrorhost
   command: chdir=/tmp/{{ nginx_package }} ./configure --prefix=/opt/nginx --with-ipv6 --user=admin --group=admin --with-http_ssl_module --with-cc-opt=-Wno-error --with-debug
-  when: "mirror" in group_names and "master" not in group_names
+  when: '"mirror" in group_names and "master" not in group_names'
 
 - name: Making nginx from source
   command: make chdir=/tmp/{{ nginx_package }}
