Fixed mirror IP in sources.list

--- a/adapt_cluster_provisioning/adapt_cluster_provisioning_playbook.yml
+++ b/adapt_cluster_provisioning/adapt_cluster_provisioning_playbook.yml
@@ -12,11 +12,13 @@
   - master
   - fileserver
   - workers
+  - mirror
   user: admin
   sudo: true
   tasks:
   - name: Dummy task to get info of boxes
     debug: msg="Connected to box"
+
 
 # Prepare fileserver
 - hosts: fileserver
