--- a/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
@@ -6,6 +6,7 @@ postgres_packages:
   - postgresql-contrib
   - postgresql-server-dev-{{ postgres_version }}
   - libpq-dev 
+  - python-dev
   - python-pip
 postgres_libraries:
   - psycopg2
