--- a/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
@@ -4,6 +4,12 @@
   apt: pkg={{ item }} state=installed
   with_items: galaxy_packages
 
+- name: Mount data, tool, galaxy volumes
+  mount: src={{ item.0 }} name={{ item.1 }} fstype=nfs state=mounted 
+  with_together:
+  - mount_shares
+  - mount_paths
+
 - name: Checkout galaxy from bitbucket
   hg: repo={{ galaxy_repo }} dest={{ galaxy_path }}
 
