--- a/adapt_cluster_provisioning/roles/galaxy_initialization/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy_initialization/tasks/main.yml
@@ -3,6 +3,12 @@
   command: python scripts/fetch_eggs.py chdir={{ galaxy_path }}
   sudo_user: galaxy
 
+- name: Mount data, tool, galaxy volumes
+  mount: src={{ item.0 }} name={{ item.1 }} fstype=nfs state=mounted 
+  with_together:
+  - mount_shares
+  - mount_paths
+
 - name: Create bogus galaxy upload dir for nginx which is not on the fileserver
   file: path={{ data_path }}/upload_store state=directory
 - name: Adding nginx configuration file
