--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -6,6 +6,9 @@
   apt: name={{ item }} state=installed
   with_items: core_packages
 
+- name: Install locale
+  command: /usr/sbin/locale-gen en_US.UTF-8
+
 - name: Set locale
   command: /usr/sbin/update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
 
