--- a/adapt_cluster_provisioning/roles/mirrors/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/mirrors/tasks/main.yml
@@ -18,8 +18,8 @@
 - name: Creating apt mirror directory
   file: path={{ ubuntu_mirrordir }}/{{ item }} mode=755 owner=root group=admin state=directory
   with_items:
-  - amd64_root
-  - armhf_root 
+  - "{{ amd64_root }}"
+  - "{{ armhf_root }}"
 - name: Setting keyring directory for apt mirror
   file: path={{ mirror_keyringpath }} state=directory
 - name: Importing keyring for apt mirror
