--- a/adapt_cluster_provisioning/roles/reboot/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/reboot/tasks/main.yml
@@ -3,10 +3,13 @@
 
 - name: Reboot system
   command: /sbin/reboot
+  async: 0
+  poll: 0
+  ignore_errors: true
 
-- name: waiting for system to come back
-  local_action: wait_for host={{ inventory_hostname }}
+- name: Wait for system to come back
+  local_action: wait_for host={{ ansible_ssh_host }}
+                port={{ ansible_ssh_port }}
                 state=started
                 delay=2
-                port=22
   sudo: false
