--- a/adapt_cluster_provisioning/roles/msgfplus/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/msgfplus/vars/main.yml
@@ -2,7 +2,7 @@
 
 msgf_ver: 9949
 msgf_pkg: msgfplus
-msgf_url: http://proteomics.ucsd.edu/Software/MSGFPlus/MSGFPlus.zip
+msgf_url: http://proteomics.ucsd.edu/Software/MSGFPlus/MSGFPlus.20140630.zip
 
 msgfplus_build_packages:
   - unzip
