--- a/adapt_cluster_provisioning/roles/msstitch/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/msstitch/vars/main.yml
@@ -2,7 +2,7 @@
 
 msstitch_pkg: msstitch
 msstitch_ver: 0.8
-msstitch_git_ver: 0c774887ecb6a6cd079b12041b1a70537cc01e3b
+msstitch_git_ver: master
 
 msstitch_loc: "{{ tool_path }}/{{ msstitch_pkg }}/{{ msstitch_ver }}"
 
