--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -15,15 +15,11 @@
 - name: Setup galaxy user
   user: name=galaxy comment="Galaxy user" uid=1001 state=present shell=/bin/bash
 
-- name: Create mount points
-  file: path={{ item }} state=directory
-  with_flattened: mount_paths
+- name: Create mount point
+  file: path={{ mount_path }} state=directory
 
 - name: Mount data, tool, galaxy volumes
-  mount: src={{ item.0 }} name={{ item.1 }} fstype=nfs state=mounted 
-  with_together:
-  - mount_shares
-  - mount_paths
+  mount: src={{ mount_share }} name={{ mount_path }} fstype=glusterfs state=mounted 
 
 - name: Create new bona fide upload_store
   file: path={{ data_path }}/upload_store state=directory
