--- a/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
@@ -5,10 +5,7 @@
   with_items: galaxy_packages
 
 - name: Mount data, tool, galaxy volumes
-  mount: src={{ item.0 }} name={{ item.1 }} fstype=nfs state=mounted 
-  with_together:
-  - mount_shares
-  - mount_paths
+  mount: src={{ mount_share }} name={{ mount_path }} fstype=glusterfs state=mounted 
 
 - name: Checkout galaxy from bitbucket
   hg: repo={{ galaxy_repo }} revision={{ galaxy_revision }} dest={{ galaxy_path }}
