--- a/adapt_cluster_provisioning/roles/shutdown_services/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/shutdown_services/tasks/main.yml
@@ -18,7 +18,4 @@
   - postgresql
 
 - name: Unmount shared filesystems
-  mount: src="{{ item.0 }}" name="{{ item.1 }}" fstype=nfs state=unmounted
-  with_together:
-  - mount_shares
-  - mount_paths
+  mount: src={{ mount_share }} name={{ mount_path }} fstype=glusterfs state=unmounted 
