--- a/adapt_cluster_provisioning/tool_install_playbook.yml
+++ b/adapt_cluster_provisioning/tool_install_playbook.yml
@@ -27,11 +27,8 @@
   sudo: True
   tasks:
   - name: Mount tool path and other paths before installing tools
-    mount: src={{ item.0 }} name={{ item.1 }} fstype=nfs state=mounted 
-    with_together:
-    - mount_shares
-    - mount_paths
-    
+    mount: src={{ mount_share }} name={{ mount_path }} fstype=glusterfs state=mounted 
+
 
 - hosts: master
   user: admin
