Switch to NFS mount gluster which proved to be faster for reading

--- a/adapt_cluster_provisioning/roles/shutdown_services/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/shutdown_services/tasks/main.yml
@@ -18,4 +18,4 @@
   - postgresql
 
 - name: Unmount shared filesystems
-  mount: src={{ mount_share }} name={{ mount_path }} fstype=glusterfs state=unmounted 
+  mount: src={{ mount_share }} name={{ mount_path }} fstype=nfs state=mounted opts=defaults
