--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -19,7 +19,7 @@
   file: path={{ mount_path }} state=directory
 
 - name: Mount data, tool, galaxy volumes
-  mount: src={{ mount_share }} name={{ mount_path }} fstype=glusterfs state=mounted 
+  mount: src={{ mount_share }} name={{ mount_path }} fstype=nfs state=mounted opts=defaults
 
 - name: Create new bona fide upload_store
   file: path={{ data_path }}/upload_store state=directory
