--- a/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
@@ -5,7 +5,7 @@
   with_items: galaxy_packages
 
 - name: Mount data, tool, galaxy volumes
-  mount: src={{ mount_share }} name={{ mount_path }} fstype=glusterfs state=mounted 
+  mount: src={{ mount_share }} name={{ mount_path }} fstype=nfs state=mounted opts=defaults
 
 - name: Checkout galaxy from bitbucket
   hg: repo={{ galaxy_repo }} revision={{ galaxy_revision }} dest={{ galaxy_path }}
