--- a/adapt_cluster_provisioning/tool_install_playbook.yml
+++ b/adapt_cluster_provisioning/tool_install_playbook.yml
@@ -27,8 +27,7 @@
   sudo: True
   tasks:
   - name: Mount tool path and other paths before installing tools
-    mount: src={{ mount_share }} name={{ mount_path }} fstype=glusterfs state=mounted 
-
+    mount: src={{ mount_share }} name={{ mount_path }} fstype=nfs state=mounted opts=defaults
 
 - hosts: master
   user: admin
