--- a/adapt_cluster_provisioning/roles/tools/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/tools/vars/main.yml
@@ -1,7 +1,5 @@
 ---
 # Vars for tool installation
 
-tool_build_packages:
-  - "{{ pycolator_build_packages }}"
-
-
+toolshare_packages:
+  - nfs-kernel-server
