--- a/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
@@ -4,18 +4,26 @@
   apt: pkg={{ item }} state=installed
   with_items: galaxy_packages
 
-- name: Mount data, tool, galaxy volumes
-  mount: src={{ mount_share }} name={{ mount_path }} fstype=nfs state=mounted opts=defaults
+- name: Create tool share path
+  file: path={{ galaxy_share_dir }} state=directory
+
+- name: Add galaxy share to NFS exports template
+  lineinfile: dest=/etc/exports state=present
+              regexp="^{{ galaxy_share_dir }}"
+              line="{{ galaxy_share_dir }}    *(rw,sync,no_root_squash,subtree_check,no_wdelay)"
+
+- name: Restart NFS
+  service: name=nfs-kernel-server state=restarted
 
 - name: Checkout galaxy from bitbucket
-  hg: repo={{ galaxy_repo }} revision={{ galaxy_revision }} dest={{ galaxy_path }}
+  hg: repo={{ galaxy_repo }} revision={{ galaxy_revision }} dest={{ galaxy_share_dir }}
 
 - name: Fix ownership of galaxy
-  file: path={{ galaxy_path }} owner=galaxy group=galaxy recurse=yes state=directory
+  file: path={{ galaxy_share_dir }} owner=galaxy group=galaxy recurse=yes state=directory
 
 - name: Put universe_wsgi file in place
   template: src=universe_wsgi.j2
-            dest={{ galaxy_path }}/universe_wsgi.ini
+            dest={{ galaxy_share_dir }}/universe_wsgi.ini
   sudo_user: galaxy
 
 - name: Install crontab to keep datasets clean
@@ -27,36 +35,68 @@
 # Conf.xml files
 - name: Upload tool_conf.xml file
   copy: src=tool_conf.xml 
-        dest={{ galaxy_path }}/tool_conf.xml
+        dest={{ galaxy_share_dir }}/tool_conf.xml
         owner=galaxy
         group=galaxy
 - name: Upload shed_tool_conf.xml
   copy: src=shed_tool_conf.xml
-        dest={{ galaxy_path }}/shed_tool_conf.xml
+        dest={{ galaxy_share_dir }}/shed_tool_conf.xml
         owner=galaxy
         group=galaxy
 - name: Upload migrated_tools_conf.xml
   copy: src=migrated_tools_conf.xml
-        dest={{ galaxy_path }}/migrated_tools_conf.xml
+        dest={{ galaxy_share_dir }}/migrated_tools_conf.xml
         owner=galaxy
         group=galaxy
 - name: Upload datatypes_conf.xml
   copy: src=datatypes_conf.xml
-        dest={{ galaxy_path }}/datatypes_conf.xml
+        dest={{ galaxy_share_dir }}/datatypes_conf.xml
         owner=galaxy
         group=galaxy
 - name: Upload tool_sheds_conf.xml
   copy: src=tool_sheds_conf.xml
-        dest={{ galaxy_path }}/tool_sheds_conf.xml
+        dest={{ galaxy_share_dir }}/tool_sheds_conf.xml
         owner=galaxy
         group=galaxy
 - name: Upload tool_data_table_conf.xml
   copy: src=tool_data_table_conf.xml
-        dest={{ galaxy_path }}/tool_data_table_conf.xml
+        dest={{ galaxy_share_dir }}/tool_data_table_conf.xml
         owner=galaxy
         group=galaxy
 - name: Upload shed_tool_data_table_conf.xml
   copy: src=shed_tool_data_table_conf.xml
-        dest={{ galaxy_path }}/shed_tool_data_table_conf.xml
+        dest={{ galaxy_share_dir }}/shed_tool_data_table_conf.xml
         owner=galaxy
         group=galaxy
+
+- name: Fetch python eggs
+  command: python scripts/fetch_eggs.py chdir={{ galaxy_share_dir }}
+  sudo_user: galaxy
+
+- name: Create galaxy db tables by running script
+  command: "{{ galaxy_share_dir }}/create_db.sh"
+  sudo_user: galaxy
+
+# Galaxy init script
+- name: Move init script from galaxy to /etc/init.d
+  command: cp {{ galaxy_share_dir }}/contrib/galaxy.debian-init /etc/init.d/galaxy
+- name: Fix permissions for init script
+  file: path=/etc/init.d/galaxy mode=755
+- name: Change path to galaxy in init script
+  lineinfile: line="DIR={{ galaxy_share_dir }}"
+              regexp="galaxy_dist"
+              dest=/etc/init.d/galaxy
+- name: Change group init script runs under to galaxy
+  lineinfile: line='GROUP="galaxy"'
+              regexp="GROUP="
+              dest=/etc/init.d/galaxy
+- name: Copy environment variable file for galaxy service
+  copy: src=galaxy_env dest=/etc/default/galaxy
+- name: Source variables in init.d service file
+  lineinfile: line="[ -f /etc/default/galaxy ] && . /etc/default/galaxy"
+              dest=/etc/init.d/galaxy
+              insertbefore=BOF
+              state=present
+- name: Register galaxy init service
+  service: name=galaxy enabled=yes
+
