--- a/adapt_cluster_provisioning/roles/postgres/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres/tasks/main.yml
@@ -5,7 +5,7 @@
   apt: pkg={{ item }} state=installed
   with_items: postgres_packages
 
-- name: Install postgres libraries for python from mirror
+- name: Install postgres libraries for ansible from mirror
   pip: name={{ item }} state=present extra_args="--index-url=http://{{ mirror_ip}}/pypimirror/simple"
        executable=pip
   with_items: postgres_libraries
@@ -21,11 +21,11 @@
 - name: Make postgres listen to our network
   lineinfile: dest=/etc/postgresql/{{ postgres_version }}/main/postgresql.conf regexp="listen_addresses" line="listen_addresses = 'localhost,{{ webserver_ip }}'"
 
-- name: Add webserver to pg_hba
-  lineinfile: dest=/etc/postgresql/{{ postgres_version }}/main/pg_hba.conf regexp='{{ webserver_ip }}' line="host\tgalaxy_adapt\tgalaxy\t{{ webserver_ip }}/32\tmd5"
-
-- name: Make sure postgres is running
-  service: name=postgresql state=restarted
+- name: Add webserver and ftpserver to pg_hba
+  lineinfile: dest=/etc/postgresql/{{ postgres_version }}/main/pg_hba.conf regexp='{{ item.address }}' line="host\tgalaxy_adapt\t{{ item.name }}\t{{ item.address }}/32\tmd5"
+  with_items:
+  - { name: "galaxy", address: "{{ webserver_ip }}" }
+  - { name: "galaxyftp", address: "{{ ftpserver_ip }}" }
 
 - name: Create postgres galaxy user
   postgresql_user: name=galaxy 
@@ -45,3 +45,5 @@
                    login_user=postgres
   sudo_user: postgres
 
+- name: Restart postgres
+  service: name=postgresql state=restarted
